<resources>
    <string name="Placeholder">Placeholder</string>
    <string name="app_name">ProgettoUni</string>
    <string name="registrati">REGISTRATI</string>
    <string name="login">ENTRA</string>
    <string name="propic">Carica Foto Profilo</string>
    <string name="name">nome</string>
    <string name="surname">cognome</string>
    <string name="mail">indirizzo e-mail</string>
    <string name="pw">password</string>
    <string name="confirm">conferma</string>
    <string name="cancel">annulla</string>
    <string name="welcome">BENVENUTO! \n Che tipo di accesso vuoi effettuare?</string>
    <string name="userAcc">accesso come utente</string>
    <string name="adminAcc">accesso come amministratore</string>
    <string name="ticketInfo">Tipo di Biglietto</string>
    <string name="map_content_description">Google Map showing theaters and user location</string>
    <string name="saveCard">Salva carta di credito </string>
    <string name="ticketPeriod">Durata o data e ora </string>
    <string name="yourTickets">I tuoi biglietti</string>
    <string name="buySubscription">Acquista un abbonamento</string>
    <string name="chooseTheatre">Scegli un teatro</string>
    <string name="choosePeriod">Per quanto vuoi che valga l\'abbonamento?</string>
    <string name="TMassimo">TEATRO MASSIMO VITTORIO EMANUELE</string>
    <string name="TPoliteama">TEATRO POLITEAMA</string>
    <string name="TBiondo">TEATRO BIONDO</string>
    <string name="M1">Un \nMese \n15€</string>
    <string name="M3">Tre \nMesi \n35€</string>
    <string name="M6">Sei \nMesi \n50€</string>
    <string name="M12">Un \nAnno  \n75€</string>
    <string name="CardN">Numero della carta</string>
    <string name="CardUN">Nome del possessore della carta</string>
    <string name="CardDateMonth">Mese di scadenza</string>
    <string name="CardDateYear">Anno di scadenza</string>
    <string name="CVC">CVC</string>
    <string name="CorrPay">Acquisto avvenuto con successo!\nTroverai il tuo biglietto nella sezione\n"Biglietti e Abbonamenti"</string>
    <string name="CorrSubPay">Acquisto avvenuto con successo!\nTroverai il tuo abbonamento nella sezione\n"Biglietti e Abbonamenti"</string>
    <string name="RetrPass">Recupera la tua password</string>
    <string name="InsMail">Inserisci la tua mail</string>
    <string name="InsMailNew">Inserisci la tua nuova mail</string>
    <string name="InsPW">Inserisci la tua nuova password</string>
    <string name="InsPWNow">Inserisci la tua password</string>
    <string name="Home">Torna alla pagina Home</string>
    <string name="ShowTicket">Scegli uno spettacolo</string>
    <string name="BuyTicket">Acquista il biglietto</string>
    <string name="myQRCode">Codice QR</string>
    <string name="infoTicket">Visualizza info biglietto</string>
    <string name="infoMembership">Visualizza info abbonamento</string>
    <string name="TodayTickets">Spettacoli in data odierna!</string>
    <string name="PurchaseSubscription">Acquista abbonamento</string>
    <string name="Selling">Completa l\'acquisto</string>
    <string name="ShowInfo">Informazioni sullo spettacolo</string>
    <string name="title_activity_real_app">RealApp</string>
    <string name="editMail">Modifica Mail</string>
    <string name="editPW">Modifica Password</string>
    <string name="retrPW">Hai dimenticato la password?</string>
    <string name="closestTheatre">Questo è il teatro più vicino a te!</string>
    <string name="position">Posizione:</string>
    <string name="where">Dove si tiene lo spettacolo?</string>
    <string name="MassimoDesription">Il Teatro Massimo Vittorio Emanuele, meglio noto come Teatro Massimo, è il più grande edificio teatrale
lirico d\'Italia, e uno dei più grandi d\'Europa (terzo per ordine di grandezza architettonica).
Alla sua apertura, per monumentalità e dimensione (oltre 7.730 metri quadrati),
suscitò le invidie di molti, come si può facilmente verificare leggendo i giornali italiani dell\'epoca.\n
Il teatro, da sempre molto sensibile alle istanze della comunità LGBT,
nell\'agosto 2015 sigla un accordo con le parti sindacali con il quale ai propri dipendenti omosessuali viene riconosciuto
il diritto di usufruire dei permessi matrimoniali per nozze e unioni civili, altrove previsto solo per i matrimoni etero.
È il primo teatro italiano ad equiparare i dipendenti omosessuali a quelli etero. Già da tempo, in concomitanza
con la settimana delle celebrazioni del pride, illumina le imponenti colonne della sua facciata con i colori della
bandiera arcobaleno.Nel 1990 il teatro è stato lo scenario di alcune riprese del film Il padrino - Parte III di Francis
Ford Coppola, con Al Pacino, Andy García e Sofia Coppola, in cui il padrino Michael Corleone si reca a Palermo per assistere
al debutto del figlio nella Cavalleria rusticana, di Pietro Mascagni.
</string>
    <string name="MassimoDYK">La storia del Teatro Massimo di Palermo è circondata da segreti inconfessabili e un alone di mistero. La leggenda più famosa riguarda il fantasma di Sant\'Agata, la cui chiesa fu distrutta per far spazio all\'edificio e si dice ancora oggi vaghi tra i corridoi e i palchi del teatro.</string>
    <string name="PoliteamaDescription">Il Politeama Garibaldi (da molti erroneamente chiamato Teatro
    Politeama) si trova sulla Piazza Ruggero Settimo al centro di Palermo.\n Già negli anni venti e
    più intensamente dal dopoguerra l\’ edificio ospitò l\’attività di cinematografo, di prima
    visione, alternando le proiezioni alle attività teatrali ospitando, anche, spettacoli
    circensi. Gli spettacoli cinematografici furono proposti, sino alla seconda metà degli anni
    sessanta. Dal 1974, il teatro tornerà
    alle attività teatrali, intensificandole, a causa della chiusura del Teatro Massimo Vittorio
    Emanuele. Nel 2000, in occasione del G8 ospitato in città, vennero realizzati i restauri
    delle decorazioni policrome in stile pompeiano dei loggiati. \nDal 2001 il teatro è sede
    dell\’Orchestra Sinfonica Siciliana. A partire dall\’estate del 2011 iniziano i lavori di
    restauro della facciata posteriore del teatro.

</string>
    <string name="PoliteamaDYK">Giuseppe Damiani Almeyda s\'ispirò ai modelli del classicismo accademico in voga alla fine dell\'Ottocento.\nSul palco del teatro Politeama Garibaldi Totò recitò il suo ultimo spettacolo</string>

    <string name="BiondoDescription">Il Teatro Biondo di Palermo è uno stabile situato sulla centralissima
    e commerciale via Roma. Costruito nel 1903, è il più recente dei teatri storici di Palermo.\n
    Il teatro Biondo si inaugura nell\’ottobre del 1903 e Margherita Biondo invita per il
    battesimo del palcoscenico una delle personalità teatrali più illustri dell\’epoca: Ermete Novelli.
        Novelli, attore ormai leggendario
    nella storia teatrale italiana, era al tempo uno dei personaggi più noti al pubblico
    della borghesia colta e agiata italiana. La signora Biondo, che con Franca Florio aveva già
    visto recitare l\’attore a Roma, capisce subito che far venire Novelli a Palermo può
    costituire l\’evento di cui c\’è bisogno per lanciare il teatro.
</string>
    <string name="BiondoDYK">All\'origine fu un punto di ritrovo del "dopo teatro" per le famiglie più in vista della città, centro di interessi culturali e mondani. Oggi la sala Strehler è la seconda del teatro e vanta un\'ulteriore stagione dedicata.</string>
    <string name="Desc">DESCRIZIONE</string>
    <string name="Regista">Regista</string>
    <string name="Direttore">Direttore</string>
    <string name="Protagonista">Protagonista</string>
    <string name="Primo_strumento">Primo Strumento</string>
    <string name="Compagnia">Compagnia</string>
    <string name="Orchestra">Orchestra</string>
    <string name="Date">Data</string>
    <string name="CodePresentation">Questo è il tuo codice di verifica dell\'account!\n NON DIMENTICARLO!</string>
    <string name="VerInfo">Per attivare il proprio account andare sulla pagina del proprio profilo, cliccare su "verifica account" e immettere il codice presentato</string>
    <string name="Understood">Ho capito</string>
    <string name="Verify">Verifica account</string>
    <string name="VerifyQuestion">Inserisci il tuo codice di verifica account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="Search"><u>Cerca spettacoli</u></string>
    <string name="Ticket"><u>I miei acquisti</u></string>
    <string name="Sub"><u>Cerca teatri</u></string>
    <string name="SearchText">Tramite questo tasto è possibile vedere quali spettacoli sono programmati per i giorni futuri, visualizzarne le eventuali informazioni e acquistare dei biglietti</string>
    <string name="TicketText">Tramite questo tasto è possibile consultare la lista di abbonamenti e biglietti posseduti, potendone visualizzare anche le eventuali informazioni, oltre al QR code a essi associati</string>
    <string name="SubText">Tramite questo tasto è possibile consultare la lista dei teatri messi a disposizione dall\' app, potendone visualizzare anche le eventuali informazioni e potendo acquistare degli abbonamenti</string>
    <string name="previous">Previous</string>
    <string name="select_place_prompt">Seleziona un posto</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="place_options">
        <item>Platea</item>
        <item>Piccionaia</item>
        <item>Loggione</item>
    </string-array>
    <string name="Num_posti">Quanti biglietti vuoi comprare?</string>

</resources>
