<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LogFrag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LogFragLinLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mailField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textPersonName"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/pwField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/retrievePasswordButton"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#000000"
                android:onClick="registerClick"
                android:text="@string/RetrPass"
                android:textSize="14sp"
                app:cornerRadius="45dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:onClick="toHome"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="45dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/confirmButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/confirmButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000000"
                    android:onClick="logConfirm"
                    android:text="@string/confirm"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cancelButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#000000"
                android:onClick="registerClick"
                android:text="@string/registrati"
                app:cornerRadius="45dp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>